--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.pyc
+*.png
 udacity/ud120-projects/enron_mail_20110402.tgz
 udacity/ud120-projects/enron_mail_20110402/
 udacity/ud120-projects/enron_mail_20150507.tgz
