--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ udacity/ud120-projects/text_learning/your_email_authors.pkl
 udacity/ud120-projects/my_classifier.pkl
 udacity/ud120-projects/my_dataset.pkl
 udacity/ud120-projects/my_feature_list.pkl
+udacity/ud120-projects/final_project/emails_by_address
